feat: add post comment box, add banner, add bubble chat

--- a/index.css
+++ b/index.css
@@ -3,6 +3,16 @@
     display: none;
 }
 
+#comment-container {
+    margin-top: 20px;
+    overflow-y: auto;
+}
+
+textarea:focus-visible {
+    outline-offset: 0px;
+    outline: none;
+}
+
 @media (max-width: 768px) {
     #mobile-menu {
       display: none;
